# fastapi-starter

./: .gitattributes  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
src/fastapi_starter/: __init__.py  app_factory.py
src/fastapi_starter/api/api_v1/: api.py
src/fastapi_starter/api/api_v1/endpoints/: health.py
src/fastapi_starter/core/: config.py
src/fastapi_starter/crud/: __init__.py  base.py
src/fastapi_starter/db/: __init__.py  base_class.py  connectors.py
src/fastapi_starter/errors/: __init__.py  handlers.py
src/fastapi_starter/health/: healthcheck.py
src/fastapi_starter/middleware/: __init__.py  logging.py
src/fastapi_starter/models/: __init__.py  mixins.py
src/fastapi_starter/schemas/: __init__.py  health.py
src/fastapi_starter/util/: dev_scripts.py  gunicorn_conf.py
tests/: conftest.py  test_crud_base.py  test_error_handlers.py  test_health.py  test_isolated_db_session.py  test_logging_middleware.py
